API: Added event / api info endpoint, simplified spec
